--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
@@ -20,6 +21,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.3",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "yup": "^0.32.11"
